--- a/firmware/esp32-pir-sensor/ESP32/platformio.ini
+++ b/firmware/esp32-pir-sensor/ESP32/platformio.ini
@@ -9,9 +9,8 @@ board_build.flash_mode = dio
 
 lib_deps =
   knolleary/PubSubClient @ ^2.8
+  bblanchon/ArduinoJson @ ^6.21.3
 
-build_flags = 
-  -D MQTT_MAX_PACKET_SIZE=1024
+build_flags = -D MQTT_MAX_PACKET_SIZE=1024
 
-board_build.esp-idf.sdkconfig_options = 
-  CONFIG_MBEDTLS_CERTIFICATE_BUNDLE=y
+board_build.esp-idf.sdkconfig_options = CONFIG_MBEDTLS_CERTIFICATE_BUNDLE=y
